<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.ListPreference
        app:key="grade"
        app:title="@string/grade_title"
        app:dialogTitle="@string/grade_title"
        app:entries="@array/grade_entries"
        app:entryValues="@array/grade_values"
        app:defaultValue="@string/grade_default_value"
        app:useSimpleSummaryProvider="true"/>

    <!--<ListPreference
        android:key="sort_plan"
        android:title="@string/sort_plan_title"
        android:summary="%s"
        android:dialogTitle="@string/sort_plan_title"
        android:entries="@array/sort_plan_entries"
        android:entryValues="@array/sort_plan_values"
        android:defaultValue="@string/sort_plan_default_value"/>-->

    <androidx.preference.SwitchPreference
        app:key="downloadAllPlans"
        app:title="@string/allPlansTitle"
        app:summaryOn="@string/allPlansOnSummery"
        app:summaryOff="@string/allPlansOffSummery"
        app:defaultValue="false"/>

    <androidx.preference.ListPreference
        app:key="settingsTheme"
        app:title="@string/settingsThemeTitle"
        app:dialogTitle="@string/settingsThemeTitle"
        app:entryValues="@array/settingsThemeValue"
        app:entries="@array/themes"
        app:defaultValue="@string/defaultThemeValue"
        app:useSimpleSummaryProvider="true"/>

</androidx.preference.PreferenceScreen>
